# countercs

./: .gitignore  COPYING  README.md  countercs.slnx  flake.nix  meson.build
src/suyogtandel.countercs/: Application.cs  Program.cs  Window.cs  suyogtandel.countercs.csproj
src/suyogtandel.countercs/ViewModels/: CounterViewModel.cs
src/suyogtandel.countercs/Views/: CounterCs.cmb  CounterCsWindow.cs  CounterCsWindow.ui  ShortcutsDialog.cs
src/suyogtandel.countercs/ui/: CounterCsWindow.ui  shortcuts-dialog.ui
